# tsbot

./: .gitignore  Cargo.toml  README.md  default.nix  scraper
src/: bot.rs  lib.rs  main.rs  scraper.rs  telegram.rs  timer.rs  types.rs
