[package]
name = "tsbot"
version = "0.1.0"
authors = ["justinwoo <moomoowoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8"
reqwest = "0.9.24"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.42"
url = "1.7.2"